[project]
name = "hrm"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adam-atan2-pytorch (>=0.1.18,<0.2.0)",
    "torch (>=2.7.1,<3.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "coolname (>=2.2.0,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "argdantic (>=1.3.3,<2.0.0)",
    "wandb (>=0.21.0,<0.22.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "huggingface-hub (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
